# pdf2md

./: .gitignore  LICENSE  README.md  main.py  projeto.xml  pyproject.toml
cache/: .gitignore  cache.db  cache.db-shm  cache.db-wal
outputs/: Manual de publicações da SBC.md  Organização e Projeto de Computadores Interface Hardware-Software_rearranged.md
outputs/allenai--olmocr-2-7b/: Manual de publicações da SBC.md
outputs/cogito-v2-preview-llama-109b-moe/: Organização e Projeto de Computadores Interface Hardware-Software_rearranged.md
outputs/qwen2.5-vl-72b-instruct/: Manual de publicações da SBC.md  Organização e Projeto de Computadores Interface Hardware-Software_rearranged.md  PISA 2015 - Assessment Analytical Framework Science Reading Math Financial Collaborative.md
outputs/qwen3-vl-235b-a22b-instruct/: Manual de publicações da SBC.md
outputs/qwen3-vl-30b-a3b-instruct/: Organização e Projeto de Computadores Interface Hardware-Software_rearranged.md
outputs/v1/: Manual de publicações da SBC.md  Organização e Projeto de Computadores Interface Hardware-Software.md
scripts/: limpar_all.sh  limpar_md.sh
src/: cache_manager.py  chunking.py  conversion.py  merge.py  types.py  ui.py  validation.py
src/conversion/: __init__.py  backends.py  core.py  prompts.py
